--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0d4dc295",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c745ee3",
+   "metadata": {},
+   "source": [
+    "# Hands-on Lab: Create your Jupyter Notebook\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60dcf98e",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29089fbe",
    "metadata": {},
    "source": [
@@ -120,6 +146,14 @@
     "print(f\"{minutes} minutes is {hours} hours and {leftover_minutes} minutes.\")\n",
     "\n",
     "#  This will convert 200 minutes to hours by diving by 60"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c9a5c62",
+   "metadata": {},
+   "source": [
+    "Copyright ©2024 IBM Corporation. All rights reserved.\n"
    ]
   }
  ],
